changing the style of the dialog yes and no buttons, resolves an issue with the vertical alignment of those buttons on FF and Safari
git-svn-id: http://svn.osqa.net/svnroot/osqa/trunk@1182 0cfe37f9-358a-4d5e-be75-b63607b5c754

--- a/forum/skins/default/media/style/style.css
+++ b/forum/skins/default/media/style/style.css
@@ -1781,13 +1781,14 @@ div.dialog .dialog-buttons {
 }
 
 .dialog-yes, .dialog-no {
+    padding: 0px 5px;
     margin: 0 3px 5px 3px;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
     background-color: #3060A8;
     color: white;
-    height: 20px;
     line-height: 20px;
+    vertical-align: baseline;
     font-weight: bold;
     border: 0;
 }
